Fix notifications icon alignment

--- a/less/forum/NotificationsDropdown.less
+++ b/less/forum/NotificationsDropdown.less
@@ -36,6 +36,7 @@
   background: @primary-color;
   color: @body-bg;
   font-size: 13px;
+  vertical-align: 0;
 
   & when (@config-colored-header = true) {
     background: #fff;
